<resources>
    <string name="app_name">RegLogApp</string>
    <string name="logout">logout</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up7">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_in2">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don`t have an account? Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>