<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".Login">
    <LinearLayout
        android:id="@+id/lang_btn"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/radius_reg_log">
        <ImageView
            android:id="@+id/globus_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/language_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:maxLines="1"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/lang_menu"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lang_btn"
        android:layout_marginTop="6dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        app:menu="@menu/languages_menu"
        android:background="@drawable/radius_reg_log"
        android:visibility="gone"
        app:itemTextColor="#000">

    </com.google.android.material.navigation.NavigationView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/radius_reg_log"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="10dp"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#5F48F5"
            android:textSize="40sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="+"
                android:gravity="center"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/country_code"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:textColor="#000"
                android:hint="7"
                android:maxLines="1"
                android:maxLength="2"
                android:textColorHint="#949494"
                android:backgroundTint="#248aff"
                android:inputType="phone|number"/>
            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:hint="phone number"
                android:layout_marginStart="10dp"
                android:textColorHint="#949494"
                android:backgroundTint="#248aff"
                android:inputType="phone|number"
                android:maxLines="1"
                android:maxLength="12"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_height="50dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/l_password"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:hint="@string/password2"
                android:textColorHint="#949494"
                android:backgroundTint="#248aff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:maxLength="18"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/pass_block_btn"
                android:visibility="gone"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/block_icon"
                android:layout_marginEnd="20dp"/>
            <ImageView
                android:id="@+id/pass_open_btn"
                android:visibility="visible"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_icon"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_your_password"
            android:textColor="#3e81ed"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:layout_marginEnd="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/gradient_button"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in2"
            android:textColor="#fff"
            android:elevation="10dp"
            android:textSize="18sp"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/go_to_sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#FF70AF"
            android:textStyle="bold"
            android:text="@string/don_t_have_an_account_sign_up"
            android:gravity="center"
            android:layout_marginTop="20sp"/>
    </LinearLayout>

</RelativeLayout>